# gait1992_description

./: CMakeLists.txt  README.md  joint_mapping.yaml  package.xml
cfg/: FixPose.cfg
config/: model_generic_control.yaml
description/model_generic/: human_with_ximus.urdf.xacro  human_with_ximus_and_map.urdf.xacro  human_with_ximus_movable.urdf.xacro  model_generic.urdf.xacro  model_generic_aCol.urdf
gait1992/: CMakeLists.txt  package.xml
gait1992_description/cfg/: FixHeading.cfg  FixPoseBase.cfg
gait1992_description/imu_defaults/: femur_l.yaml  femur_r.yaml  pelvis.yaml  tibia_l.yaml  tibia_r.yaml  torso.yaml
gait1992_description/launch/: gui.launch  (+6 more)
gait1992_fb_behaviors/: README.md
imu_defaults/: base_frame.yaml  talus_l.yaml  talus_r.yaml
launch/: a.launch  feet_missing_tfs_publisher.launch  fixer_client.launch  ground_tf.launch  human_control.launch  human_control_center_pelvis.launch  human_control_imus.launch  human_control_imus_movable.launch  human_control_imus_movable_pipeline.launch  human_control_no_controller.launch  human_control_no_rviz.launch  human_control_ns.launch  human_state_pub.launch  imu_fixer_group.launch  imu_initial_pose_setter.launch  load_generated_urdf_ximus_movable.launch  pelvis_map_pose_fake_tf_publisher.launch
models/: model_generic_1992_disabled_vis.osim
rviz/: gait1992_description.rviz  gait1992_description_imus.rviz  gait1992_description_wrenches2.rviz
scripts/: calibrated_from_file.py  fixheading_server.py  fixquaternions_server.py  floating_joint_state_publisher.py  tmux_session_imus.bash
urdf/: model.urdf
(+230 files in other folders)
